--- a/app/views/users_backoffice/welcome/index.html.erb
+++ b/app/views/users_backoffice/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>UsersBackoffice::Welcome#index</h1>
-<p>Find me in app/views/users_backoffice/welcome/index.html.erb</p>
+<div class="card">
+  <div class="card-header">
+    <h1><%= t('views.welcome.title_users')%></h1>
+  </div>
+  <div class="card-body">
+    
+  </div>
+  <div class="card-footer">
+  </div>
+</div>
