--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -32,6 +32,21 @@
       </div>
 
       <%= form.fields_for :user_profile do |profile_form| %>
+        <div class="row">
+          <div class="col-12 mt-2 col-sm-6">
+            <div class="form-group">
+              <%= profile_form.label :birthdate %>
+              <%= profile_form.date_field :birthdate, class: "form-control" %>
+            </div>
+          </div>
+
+          <div class="col-12 mt-2 col-sm-6">
+            <div class="form-group">
+              <%= profile_form.label :address %>
+              <%= profile_form.text_field :address, class: "form-control" %>
+            </div>
+          </div>
+        </div>
 
         <%= profile_form.label :gender %>
         <div class="form-group">
@@ -56,22 +71,13 @@
               labels.forEach((lbl) => {
                 if(lbl !== label) {
                   lbl.classList.remove('btn-primary');
-                  lbl.classList.add('btn-default');                  
+                  lbl.classList.add('btn-default');
                 };
               });
             });
           });
         <% end %>
 
-        <div class="form-group">
-          <%= profile_form.label :address %>
-          <%= profile_form.text_field :address, class: "form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= profile_form.label :birthdate %>
-          <%= profile_form.text_field :birthdate, class: "form-control" %>
-        </div>
       <% end %>
 
       <div class="form-group">
