--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,19 +1,29 @@
 <div class="modal fade" id="avatarModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      <%= form_with(url: users_backoffice_profile_path, model: current_user, local: true) do |form| %>
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Avatar</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <%= form.fields_for :user_profile do |profile_form| %>
+            <div class="col-12 mt-2 col-sm-6">
+              <div class="form-group">
+                <div class="text-center">
+                  <%= image_tag(avatar_url, class: "img-circle img-fluid ml-5 mt-5 mb-5", alt: "avatar") %>
+                </div>
+                <%= profile_form.file_field :avatar %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+        <div class="modal-footer">
+          <%= form.submit "Salvar", class:"btn btn-primary"%>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
