--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -17,9 +17,14 @@
 
         <ul class="navbar-nav ml-auto mr-3">
           <li class="nav-item">
+            <div class="user-panel">
+              <%= image_tag(avatar_url, class: "img-circle", alt: "avatar") %>
+            </div>
+          </li>
+          <li class="nav-item">
             <div class="dropdown">
               <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="far fa-user-circle mr-2"></i> <%= current_user.email %>
+                <%= current_user.email %>
               </button>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 
@@ -41,7 +46,7 @@
 
       <aside class="main-sidebar sidebar-light-primary elevation-4">
         <div class="brand-link">
-          <%= image_tag("logo.png", options = { alt: "Time to answer Logo", class: "brand-image img-circle elevation-3", style: "opacity: .8" }) %>
+          <%= image_tag("logo.png", alt: "Time to answer Logo", class: "brand-image img-circle elevation-3", style: "opacity: .8") %>
           <span class="brand-text font-weight-light">Time to Answer</span>
         </div>
 
@@ -49,7 +54,7 @@
 
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-              <%= link_to image_tag("avatar.png", options = {class: "img-circle elevation-2", alt: "avatar"}), '#', "data-toggle":"modal", "data-target":"#avatarModal" %>
+              <%= link_to image_tag(avatar_url, class: "img-circle", alt: "avatar"), '#', "data-toggle":"modal", "data-target":"#avatarModal" %>
             </div>
             <div class="info">
               <%= current_user.full_name %>
