--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -1,3 +1,3 @@
 <li class="page-item">
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.last'), url, remote: remote, class: 'page-link' %>
+  <%= link_to_unless current_page.last?, "<span class='d-block d-sm-none'>&raquo;</span><span class='d-none d-sm-block'>#{raw(t 'views.pagination.last')}</span>".html_safe, url, remote: remote, class: 'page-link' %>
 </li>
