--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,3 +1,3 @@
 <li class="page-item">
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, rel: 'next', remote: remote, class: 'page-link' %>
+  <%= link_to_unless current_page.last?, "<span class='d-block d-sm-none'>&rsaquo;</span><span class='d-none d-sm-block'>#{raw(t 'views.pagination.next')}</span>".html_safe, url, rel: 'next', remote: remote, class: 'page-link' %>
 </li>
