--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,3 +1,3 @@
 <li class="page-item">
-  <%= link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, rel: 'prev', remote: remote, class: 'page-link' %>
+  <%= link_to_unless current_page.first?, "<span class='d-block d-sm-none'>&lsaquo;</span><span class='d-none d-sm-block'>#{raw(t 'views.pagination.previous')}</span>".html_safe, url, rel: 'prev', remote: remote, class: 'page-link' %>
 </li>
