--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -20,6 +20,12 @@
 
       <div class="form-group">
         <div class="row">
+          <div class="col-12">
+            <%= form.label :locale %>
+            <%= form.select :locale, User.locales.keys.map {|key| [User.human_attribute_name("locale.#{key}"), key]}, {},class: "form-control" %>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-12 mt-2 col-sm-6">
             <%= form.label :first_name %>
             <%= form.text_field :first_name, class: "form-control", placeholder: "Nome" %>
@@ -27,10 +33,6 @@
           <div class="col-12 mt-2 col-sm-6">
             <%= form.label :last_name %>
             <%= form.text_field :last_name, class: "form-control", placeholder: "Sobrenome" %>
-          </div>
-          <div class="col-12 mt-2 col-sm-6">
-            <%= form.label :locale %>
-            <%= form.select :locale, User.locales.keys.map {|key| [User.human_attribute_name("locale.#{key}"), key]}, class: "form-control" %>
           </div>
         </div>
       </div>
